--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "Islam Gaibullaev",
   "license": "ISC",
   "dependencies": {
-    "node-telegram-bot-api": "^0.66.0",
-    "request": "^2.88.2"
+    "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.7"
